2009-06-16  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#117748 - Transition while switching to and from portrait mode
	                   is not proper (dial pad)
	* src/util/hd-transition.c
	* src/util/hd-transition.h: Added hd_transition_rotate_ignore_damage,
	  which returns whether or not the compositor should ignore damage
	  events (because the screen is blanked). Use calls to this to
	  prolong the time we spend in the blanking state.
	* src/mb/hd-comp-mgr.c: consult hd_transition_rotate_ignore_damage
	  before we queue a redraw for the screen.
	* data/transitions.ini: removed duration_blanking item as it is no
	  longer required

2009-06-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added missing D-Bus signal matches for lock and screen status.
	For: NB#122221

	* src/launcher/hd-app-mgr.c:

2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.54

2009-06-15  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Avoid resizing the textures used for
	  blurring and instead rotate the image by 90 degrees if the aspect
	  ratio is wrong. This saves us vital time in the middle of a rotate
	  transition. Done to help with NB#117748.

2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client): Avoid crash in
	case of weird internal inconsistency. Fixes: NB#122802

2009-06-15  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#119149 - Title graphics should not be scaled

	* src/tidy/tidy-sub-texture.c
	* src/tidy/tidy-sub-texture.h: Added tidy_sub_texture_set_tiled and
	  relevant code to tile the image in GLES.
	* src/home/hd-clutter-cache.c: Set textures to be tiled when they
	  would previously have been stretched.
	* src/home/hd-title-bar.c: Now ensure that we use a tidy_sub_texture
	  for the title bar background, and make sure that when it is 
	  stretched it tiles the image.
