@@ -1,3 +1,9 @@
+2009-06-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/main.c: Remove old keyboard shortcuts and add ctrl+backspace
+	and shift+ctrl+n shortcuts. These require a recent libmatchbox2 to
+	work.
+
 2009-06-16  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#117748 - Transition while switching to and from portrait mode
